[gd_scene load_steps=6 format=3 uid="uid://brhxv3orricnm"]

[ext_resource type="Texture2D" uid="uid://cv746vcncpbrj" path="res://Hero Knight/Sprites/HeroKnight/LedgeGrab/HeroKnight_Grab Ledge_4.png" id="1_rs7mk"]
[ext_resource type="Script" path="res://src/elements/hanging_ally.gd" id="2_oow5s"]
[ext_resource type="PackedScene" uid="uid://6sbbr2hd7dkn" path="res://src/elements/custom_font_label.tscn" id="4_0dfvd"]
[ext_resource type="Texture2D" uid="uid://cppfa8m2dfeyx" path="res://Hero Knight/Sprites/HeroKnight/HeroKnightNoWeapons.png" id="4_ooh8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h42hq"]
size = Vector2(65, 79)

[node name="Node2D" type="Node2D"]
script = ExtResource("2_oow5s")

[node name="HangingAlly" type="Sprite2D" parent="."]
texture = ExtResource("1_rs7mk")
flip_h = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-49, -59)
shape = SubResource("RectangleShape2D_h42hq")

[node name="PlayerCheck" type="RayCast2D" parent="."]
position = Vector2(-16, -43)
target_position = Vector2(-68, 0)
collision_mask = 2

[node name="SavedAlly" type="Sprite2D" parent="."]
visible = false
position = Vector2(-37, -38)
texture = ExtResource("4_ooh8x")
flip_h = true
region_enabled = true
region_rect = Rect2(28, 6, 47, 57)

[node name="CustomFontLabel" parent="." instance=ExtResource("4_0dfvd")]
offset_left = -86.0
offset_top = -98.0
offset_right = 3.0
offset_bottom = -42.0
text = "Press Y to save this soldier!"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
